# pymp4v2

./: .bumpversion.cfg  .dockerignore  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  package_info.py.in  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test_pymp4v2.py  test_pymp4v2_raw.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/worflows/: ci.yml
.github/workflows/: ci.yml  release.yml
api/: index.html
changelog/: index.html
cmake/: PostBuildCleanup.cmake
contributing/: index.html
docs/: api.md  installation.md  usage.md
include/mp4v2/: project.h
include/pymp4v2/: mp4_file_handle_wrapper.h  mp4file.h  raw.h
installation/: index.html
lib/: libmp4v2.so.2.1.3
python/pymp4v2/: __init__.py
python/pymp4v2/core/: __init__.py  module.py
search/: search_index.json
src/: main.cpp  mp4_file_handle_wrapper.cpp  mp4file.cpp  mp4v2_wrapper._cpp_  mp4v2_wrapper.cpp  raw.cpp
tests/: test_pymp4v2.py  test_pymp4v2_raw.py
usage/: index.html
