[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "pybind11>=2.6.0",
    "pybind11-stubgen>=2.5.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymp4v2"
version = "0.1.0"
description = "Python bindings for MP4v2 library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mp4", "video", "multimedia", "bindings"]
authors = [
  {name = "Dmitriy Efimov", email = "daefimov@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++"
]
dependencies = []

[tool.scikit-build]
cmake-args = [
    "-DCMAKE_OSX_DEPLOYMENT_TARGET:STRING=10.9",
]
